Actualización de animación
Se modifico el las animaciones de aparición de los textos e imágenes

--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -52,8 +52,6 @@
     <!-- Spinner End -->
 
 
-
-
     <!-- Topbar Start -->
     <div class="container-fluid text-white d-none d-lg-flex" style="background-color:#00296b;">
         <div class="container py-1">
@@ -134,7 +132,7 @@
     
 
     <div class="container-xxl pt-5">
-        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="1s" style="max-width: 500px;">
             <h1 class="display-6 mb-5">Quienes Somos</h1>
         </div>
         <div class="container">
@@ -146,13 +144,13 @@
         </div>
     </div>
 
-    <div class="container-xxl pt-5 mb-5">
+    <div class="container-xxl pt-5 mb-5 wow fadeInUp" data-wow-delay="0.5s">
         <div class="row">
             <div  class="col-md-6" style="align-items: center;">
                 <img id="nosotros" src="../img/icon/icon-mision.png" alt="Mision">
             </div>
             <div class="col-md-6" style="align-items: center;">
-                <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 350px;">
+                <div class="text-center mx-auto" style="max-width: 350px;">
                     <h1 class="display-6 mb-5">Misión</h1>
                 </div>
                 <p class="fs-5 text-center">
@@ -166,13 +164,13 @@
         </div>
     </div>
 
-    <div class="container-xxl pt-5 mb-5">
+    <div class="container-xxl pt-5 mb-5 wow fadeInUp" data-wow-delay=".5s">
         <div class="row">
             <div  class="col-md-6" style="align-items: center;">
                 <img id="nosotros" src="../img/icon/icon-vision.png" alt="Valores">
             </div>
             <div class="col-md-6" style="align-items: center;">
-                <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 350px;">
+                <div class="text-center mx-auto" style="max-width: 350px;">
                     <h1 class="display-6 mb-5">Visión</h1>
                 </div>
                 <p class="fs-5 text-center">
@@ -185,13 +183,13 @@
         </div>
     </div>
 
-    <div class="container-xxl pt-5 mb-5">
+    <div class="container-xxl pt-5 mb-5 wow fadeInUp" data-wow-delay="0.5s">
         <div class="row">
             <div  class="col-md-6" style="align-items: center;">
                 <img id="nosotros" src="../img/icon/icon-values.png" alt="Valores">
             </div>
             <div class="col-md-6" style="align-items: center;">
-                <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 350px;">
+                <div class="text-center mx-auto" style="max-width: 350px;">
                     <h1 class="display-6 mb-5">Valores</h1>
                 </div>
                 <p class="fs-5 text-center">
