--- a/servicio/equipamiento-industrial/index.html
+++ b/servicio/equipamiento-industrial/index.html
@@ -33,7 +33,6 @@
 </head>
 
 <body>
-    
     <!--Loader star-->
     <div class="loader loader--active">
         <div class="loader__icon">
@@ -89,6 +88,7 @@
                     <div class="navbar-nav" >
                         <a href="../../." class="nav-item nav-link">Inicio</a>
                         <a href="../../nosotros/." class="nav-item nav-link">Nosotros</a>
+                        <a href="../../nosotros/." class="nav-item nav-link">Equipamiento Industrial</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Servicios</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
@@ -157,57 +157,75 @@
                 <!-- proyect 1 -->
                 <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/proyect/project-1.jpg" alt="servicioElectromecanica">
+                        <img class="img-fluid" src="../../img/img/img_1.jpeg" alt="servicioElectromecanica">
                     </div>
                     <div class="p-4">
                         <p class="text-center d-block h5" style="color: #00296b;" ></p>
-                        <!-- <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span> -->
+                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span>
                     </div>
                 </div>
                 <!-- Proyecto 2 -->
                 <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/proyect/project-2.jpg" alt="servicioElectromecanica">
+                        <img class="img-fluid" src="../../img/img/img_2.jpg" alt="servicioElectromecanica">
                     </div>
                     <div class="p-4">
                         <p class="text-center d-block h5" style="color: #00296b;"></p>
-                        <!-- <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span> -->
+                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span>
                     </div>
                 </div>
                 <!-- Proyecto 3 -->
                 <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/proyect/project-3.jpg" alt="servicioElectromecanica">
+                        <img class="img-fluid" src="../../img/img/img_3.jpg" alt="servicioElectromecanica">
                     </div>
                     <div class="p-4">
                         <p class="text-center d-block h5" style="color: #00296b;"></p>
-                        <!-- <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span> -->
+                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span>
                     </div>
                 </div>
                 <!-- Proyecto 4 -->
                 <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/proyect/project-4.jpg" alt="servicioElectromecanica">
+                        <img class="img-fluid" src="../../img/img/img_4.jpg" alt="servicioElectromecanica">
                     </div>
                     <div class="p-4">
                         <p class="text-center d-block h5" style="color: #00296b;"></p>
-                        <!-- <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span> -->
+                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span>
                     </div>
                 </div>
                 <!-- Proyecto 5 -->
                 <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/proyect/project-5.jpg" alt="servicioElectromecanica">
+                        <img class="img-fluid" src="../../img/img/img_5.jpg" alt="servicioElectromecanica">
                     </div>
                     <div class="p-4">
                         <p class="text-center d-block h5" style="color: #00296b;"></p>
-                        <!-- <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span> -->
+                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Galery End -->
+
+
+    <!--Services Start-->
+    <div class="container-xxl pt-5 mb-5">
+        <div class="row">
+            <div class="col-lg-6 d-flex align-items-center px-4 py-3">
+                <p class="fs-5 text-center">
+                    Ofrecemos una amplia variedad de productos de ferretería, desde herramientas y equipos de construcción, hasta materiales y 
+                    suministros industriales. Todo lo que necesitas para tus proyectos, con la calidad y respaldo que nos caracteriza. ¡Visítanos 
+                    y encuentra soluciones para cada necesidad!
+                </p>
+            </div>
+            <div class="col-md-6" style="align-items: center;">
+                <img id="about" src="../../img/proyect/img_ferr.jpg" alt="electromecánica" style="width: 70%; border-radius: 5px; border-end-start-radius: 50px;">
+            </div>
+        </div>
+    </div>
+    <!-- Service End -->
 
 
     <!--Clients Star-->
