--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -99,6 +99,7 @@
                     <div class="navbar-nav" >
                         <a href="../" class="nav-item nav-link">Inicio</a>
                         <a href="./" class="nav-item nav-link active">Nosotros</a>
+                        <a href="../../servicio/equipamiento-industrial/" class="nav-item nav-link">Equipamiento Industrial</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Servicios</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
