--- a/servicio/equipamiento-industrial/index.html
+++ b/servicio/equipamiento-industrial/index.html
@@ -88,7 +88,7 @@
                     <div class="navbar-nav" >
                         <a href="../../." class="nav-item nav-link">Inicio</a>
                         <a href="../../nosotros/." class="nav-item nav-link">Nosotros</a>
-                        <a href="../../nosotros/." class="nav-item nav-link">Equipamiento Industrial</a>
+                        <a href="../../nosotros/." class="nav-item nav-link active">Equipamiento Industrial</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Servicios</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
@@ -111,7 +111,7 @@
     </div>
     <!--Navbar End-->
     
-
+    
     <!-- header Start -->
     <div class="container-fluid page-header-ei py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
