--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -15,7 +15,9 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@500;700&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -98,8 +100,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav" >
                         <a href="../" class="nav-item nav-link">Inicio</a>
-                        <a href="./" class="nav-item nav-link active">Nosotros</a>
-                        <a href="../../servicio/equipamiento-industrial/" class="nav-item nav-link">Equipamiento Industrial</a>
+                        <a href="../" class="nav-item nav-link active">Nosotros</a>
+                        <a href="../servicio/equipamiento-industrial/" class="nav-item nav-link">Equipamiento Industrial</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Servicios</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
@@ -159,8 +161,8 @@
                 <img id="nosotros" src="../img/icon/icon-mision.png" alt="Mision">
             </div>
             <div class="col-md-6" style="align-items: center;">
-                <div class="text-center mx-auto" style="max-width: 350px;">
-                    <h2 id="titleText" class="display-6 mb-5">Misión</h2>
+                <div class="text-center mx-auto" style="max-width: 400px;">
+                    <h2 id="titleText" class="display-6 mb-4" style="font-size: 2.5rem; font-weight: bold;">Misión</h2>
                 </div>
                 <p class="fs-5 text-center">
                     Impulsar la excelencia empresarial a través de servicios de consultoría y soluciones integrales en
