--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -15,9 +15,7 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -35,32 +33,42 @@
     <link href="../css/style.css" rel="stylesheet">
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0XDQFMG7Q1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0XDQFMG7Q1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-0XDQFMG7Q1');
-</script>
+    gtag('config', 'G-0XDQFMG7Q1');
+    </script>
 
 <body>
     <!-- Loader Sart -->
-    <div class="loader loader--active">
+    <!-- <div id="loader">
+        <div class="spinner"></div>
+    </div> -->
+    <!-- <div class="loader loader--active">
         <div class="loader__icon">
-          <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
-            <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"></path>
-            <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0C22.32,8.481,24.301,9.057,26.013,10.047z"></path>
-            <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20" dur="0.5s" repeatCount="indefinite"></animateTransform>
-          </svg>
+            <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px"
+                viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
+                <path opacity="0.2" fill="#000"
+                    d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z">
+                </path>
+                <path fill="#000"
+                    d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0C22.32,8.481,24.301,9.057,26.013,10.047z">
+                </path>
+                <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20"
+                    to="360 20 20" dur="0.5s" repeatCount="indefinite"></animateTransform>
+            </svg>
         </div>
         <div class="loader__tile"></div>
         <div class="loader__tile"></div>
         <div class="loader__tile"></div>
         <div class="loader__tile"></div>
         <div class="loader__tile"></div>
-    </div>
+    </div> -->
     <!-- Loader End -->
 
 
@@ -90,18 +98,18 @@
     <!-- Navbar Start--> 
     <div class="container-fluid bg-white sticky-top">
         <div class="container">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
+            <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0 justify-content-center">
                 <a href="../" class="navbar-brand d-lg-none">
-                    <img src="../img/Logo_E&C_.png" style="width: 95px; height: 45px;"></img>
+                    <img src="../img/Logo_E&C_.png"  alt="Logo_E&C" style="width: 95px; height: 45px;"></img>
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                     <div class="navbar-nav" >
                         <a href="../" class="nav-item nav-link">Inicio</a>
                         <a href="../" class="nav-item nav-link active">Nosotros</a>
-                        <a href="../servicio/equipamiento-industrial/" class="nav-item nav-link">Equipamiento Industrial</a>
+                        <!-- <a href="../servicio/equipamiento-industrial/" class="nav-item nav-link">Equipamiento Industrial</a> -->
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Servicios</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
@@ -217,33 +225,34 @@
     <!--Clients Star-->
     <div class="container-xxl py-6">
         <div class="container">
-            <div class="text-center text-md-start pb-5 pb-md-0 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+            <div class="text-center text-md-start pb-5 pb-md-0 wow fadeInUp" data-wow-delay="0.1s"
+                style="max-width: 500px;">
                 <p class="fs-5 fw-medium">Clientes</p>
                 <h2 id="titleText" class="display-6 mb-5">Ellos han confiado en nosotros</h2>
             </div>
-            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.5s">
                 <div class="client-item p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="../img/clientes/envases.png" alt="">
+                    <img class="mb-4" src="../img/clientes/envases.png" alt="logo_cliente">
                 </div>
                 <div class="client-item p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="../img/clientes/psw.png" alt="">
+                    <img class="mb-4" src="../img/clientes/psw.png" alt="logo_cliente">
                 </div>
                 <div class="client-item p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="../img/clientes/ryiobi.png" alt="">
+                    <img class="mb-4" src="../img/clientes/ryiobi.png" alt="logo_cliente">
                 </div>
                 <div class="client-item p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="../img/clientes/tsubaki.png" alt="">
+                    <img class="mb-4" src="../img/clientes/tsubaki.png" alt="logo_cliente">
                 </div>
                 <div class="client-item p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="../img/clientes/club_leon.png" alt="">
+                    <img class="mb-4" src="../img/clientes/club_leon.png" alt="logo_cliente">
                 </div>
                 <div class="client-item p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="../img/clientes/gto.png" alt="">
+                    <img class="mb-4" src="../img/clientes/gto.png" alt="logo_cliente">
                 </div>
             </div>
         </div>
     </div>
-    <!--Clients Ens-->
+    <!--Clients End-->
 
 
     <!-- Footer -->
