Actualización de diseño

--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -48,6 +48,7 @@
     <!-- <div id="loader">
         <div class="spinner"></div>
     </div> -->
+
     <!-- <div class="loader loader--active">
         <div class="loader__icon">
             <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg"
@@ -173,11 +174,9 @@
                     <h2 id="titleText" class="display-6 mb-4" style="font-size: 2.5rem; font-weight: bold;">Misión</h2>
                 </div>
                 <p class="fs-5 text-center">
-                    Impulsar la excelencia empresarial a través de servicios de consultoría y soluciones integrales en
-                    tecnologías de la información y transformación digital. Con un equipo altamente calificado y
-                    comprometido, buscamos generar mayor rentabilidad para nuestros clientes actuales y futuros. Nos
-                    comprometemos a ofrecer soluciones innovadoras y personalizadas que impulsen el crecimiento y
-                    la competitividad de las empresas en un entorno digital en constante evolución.
+                    Impulsar el crecimiento empresarial a través de alianzas estratégicas, desarrollando 
+                    proyectos en cualquier sector para brindar soluciones innovadoras y eficientes que generen valor 
+                    a nuestros clientes.
                   </p>
             </div>
         </div>
@@ -193,10 +192,9 @@
                     <h2 id="titleText" class="display-6 mb-5">Visión</h2>
                 </div>
                 <p class="fs-5 text-center">
-                    Ser reconocida a nivel nacional como una organización líder en consultoría, experta en
-                    transformación digital, implementando servicios y soluciones integrales con innovación y
-                    rentabilidad, tanto en el sector privado como en el publico, respetando nuestros valores
-                    empresariales.
+                    Ser el corporativo líder en integración de proyectos multisectoriales, reconocido por nuestra 
+                    capacidad de conectar empresas y ofrecer soluciones estratégicas que transformen industrias y 
+                    generen un impacto positivo en el mercado global.
                 </p>
             </div>
         </div>
@@ -212,10 +210,9 @@
                     <h2 id="titleText" class="display-6 mb-5">Valores</h2>
                 </div>
                 <p class="fs-5 text-center">
-                    Respeto, confianza, rentabilidad, honestidad, responsabilidad, calidad, productividad,
+                    Respeto, lealtad, confianza, rentabilidad, honestidad, responsabilidad, calidad, productividad,
                     profesionalismo.
                 </p>
-
             </div>
         </div>
     </div>
@@ -223,7 +220,7 @@
 
 
     <!--Clients Star-->
-    <div class="container-xxl py-6">
+    <!-- <div class="container-xxl py-6">
         <div class="container">
             <div class="text-center text-md-start pb-5 pb-md-0 wow fadeInUp" data-wow-delay="0.1s"
                 style="max-width: 500px;">
@@ -251,7 +248,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--Clients End-->
 
 
