Actualización de diseño

--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
@@ -45,9 +45,9 @@
 
 <body>
     <!-- Loader Sart -->
-    <!-- <div id="loader">
+    <div id="loader">
         <div class="spinner"></div>
-    </div> -->
+    </div> 
 
     <!-- <div class="loader loader--active">
         <div class="loader__icon">
@@ -152,11 +152,11 @@
 
     <!--About us-->  
     <div class="container-xxl pt-5">
-        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="1s" style="max-width: 500px;">
+        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.5s" style="max-width: 500px;">
             <h2 id="titleText" class="display-6 mb-5">Quienes Somos</h2>
         </div>
         <div class="container">
-            <p class="fs-5 text-center">
+            <p class="fs-5 text-center wow fadeInUp" data-wow-delay="0.7s">
                 Somos una organización, que ofrece servicios de consultoría y soluciones integrales en
                 tecnologías de la información y transformación digital con personal altamente calificado, 
                 generando mayor rentabilidad a nuestros clientes.
@@ -164,7 +164,54 @@
         </div>
     </div>
 
-    <div class="container-xxl pt-5 mb-5 wow fadeInUp" data-wow-delay="0.5s">
+
+    <!-- <div class="container-xxl pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="text-center mx-auto wow fadeInUp" data-wow-delay="1s" style="max-width: 500px;">
+                        <h2 id="titleText" class="display-6 mb-5">Misión</h2>
+                    </div>
+                    <div class="container">
+                        <p class="fs-5 text-center">
+                            Somos una organización, que ofrece servicios de consultoría y soluciones integrales en
+                            tecnologías de la información y transformación digital con personal altamente calificado, 
+                            generando mayor rentabilidad a nuestros clientes.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="text-center mx-auto wow fadeInUp" data-wow-delay="1s" style="max-width: 500px;">
+                        <h2 id="titleText" class="display-6 mb-5">Quienes Somos</h2>
+                    </div>
+                    <div class="container">
+                        <p class="fs-5 text-center">
+                            Somos una organización, que ofrece servicios de consultoría y soluciones integrales en
+                            tecnologías de la información y transformación digital con personal altamente calificado, 
+                            generando mayor rentabilidad a nuestros clientes.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="text-center mx-auto wow fadeInUp" data-wow-delay="1s" style="max-width: 500px;">
+                        <h2 id="titleText" class="display-6 mb-5">Quienes Somos</h2>
+                    </div>
+                    <div class="container">
+                        <p class="fs-5 text-center">
+                            Somos una organización, que ofrece servicios de consultoría y soluciones integrales en
+                            tecnologías de la información y transformación digital con personal altamente calificado, 
+                            generando mayor rentabilidad a nuestros clientes.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div> -->
+
+    <!-- <div class="container-xxl pt-5 mb-5 wow fadeInUp" data-wow-delay="0.5s">
         <div class="row">
             <div  class="col-md-6" style="align-items: center;">
                 <img id="nosotros" src="../img/icon/icon-mision.png" alt="Mision">
@@ -215,8 +262,151 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--About us end-->
+
+
+    <!-- Team Start -->
+    <div class="experience" id="experience">
+        <div class="container">
+            <div class="timeline">
+                <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                    <div class="timeline-text">
+                        <div class="timeline-date">Misión</div>
+                        <div class="d-flex align-items-center">
+                            <i class="fa fa-bullseye fa-3x me-3"></i>
+                            <p>
+                                Somos una organización, que ofrece servicios de consultoría y soluciones integrales en
+                                tecnologías de la información y transformación digital con personal altamente calificado, 
+                                generando mayor rentabilidad a nuestros clientes.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-item right wow slideInRight" data-wow-delay="0.3s">
+                    <div class="timeline-text">
+                        <div class="timeline-date">Visión</div>
+                        <div class="d-flex align-items-center">
+                            <i class="fa fa-eye fa-3x me-3"></i>
+                            <p>
+                                Ser el corporativo líder en integración de proyectos multisectoriales, reconocido por nuestra 
+                                capacidad de conectar empresas y ofrecer soluciones estratégicas que transformen industrias y 
+                                generen un impacto positivo en el mercado global.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-item left wow slideInLeft" data-wow-delay="0.5s">
+                    <div class="timeline-text">
+                        <div class="timeline-date">Valores</div>
+                        <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-hand-holding-heart fa-3x me-3"></i>
+                            <p>
+                                Respeto, lealtad, confianza, rentabilidad, honestidad, responsabilidad, calidad, productividad,
+                                profesionalismo.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Team End -->
+
+
+    <!-- Zona prueba Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <!-- <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="text-primary mb-3"><span class="fw-light text-dark">Lorem ipsum dolor</span> sit amet</h1>
+                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet, erat non malesuada consequat, nibh erat tempus risus.</p>
+            </div> -->
+            <div class="row g-4 align-items-center">
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
+                    <div class="row g-5">
+                        <div class="col-12 d-flex">
+                            <div class="btn-square rounded-circle border flex-shrink-0"
+                                style="width: 80px; height: 80px;">
+                                <i class="fa fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="ps-3 wow fadeIn" data-wow-delay="0.5s">
+                                <h5>Imaginemos un mundo donde</h5>
+                                <hr class="w-25 bg-primary my-2">
+                                <h5>las ideas fluyen sin límites.</h5>
+                            </div>
+                        </div>
+                        <div class="col-12 d-flex">
+                            <div class="btn-square rounded-circle border flex-shrink-0"
+                                style="width: 80px; height: 80px;">
+                                <i class="fa fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="ps-3 wow fadeIn" data-wow-delay="1s">
+                                <h5>Donde la colaboración </h5>
+                                <hr class="w-25 bg-primary my-2">
+                                <h5>redefine lo posible.</h5>
+                            </div>
+                        </div>
+                        <div class="col-12 d-flex">
+                            <div class="btn-square rounded-circle border flex-shrink-0"
+                                style="width: 80px; height: 80px;">
+                                <i class="fa fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="ps-3 wow fadeIn" data-wow-delay="1.5s">
+                                <h5>Cada conexión</h5>
+                                <hr class="w-25 bg-primary my-2">
+                                <h5>es una oportunidad.</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <!-- <img class="img-fluid animated pulse infinite" src="../img/Logo_E&C_.png"> -->
+                    <img class="img-fluid" src="../img/logo.png">
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="row g-5">
+                        <div class="col-12 d-flex">
+                            <div class="btn-square rounded-circle border flex-shrink-0"
+                                style="width: 80px; height: 80px;">
+                                <i class="fa fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="ps-3 wow fadeIn" data-wow-delay="0.5s">
+                                <h5>Empresas unidas, </h5>
+                                <hr class="w-25 bg-primary my-2">
+                                <h5>creando soluciones integrales.</h5>
+                            </div>
+                        </div>
+                        <div class="col-12 d-flex">
+                            <div class="btn-square rounded-circle border flex-shrink-0"
+                                style="width: 80px; height: 80px;">
+                                <i class="fa fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="ps-3 wow fadeIn" data-wow-delay="1s">
+                                <h5>Desde proyectos internos hasta mercados externos: </h5>
+                                <hr class="w-25 bg-primary my-2">
+                                <h5>somos el puente.</h5>
+                            </div>
+                        </div>
+                        <div class="col-12 d-flex">
+                            <div class="btn-square rounded-circle border flex-shrink-0"
+                                style="width: 80px; height: 80px;">
+                                <i class="fa fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="ps-3 wow fadeIn" data-wow-delay="1.5s">
+                                <h5>Bienvenidos al futuro </h5>
+                                <hr class="w-25 bg-primary my-2">
+                                <h5>de los negocios, hoy.</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Zona prueba End -->
+
+
+
 
 
     <!--Clients Star-->
