--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -147,7 +147,7 @@
             <h2 id="titleText" class="display-6 mb-5">Quienes Somos</h2>
         </div>
         <div class="container">
-            <p class="fs-5 text-center wow fadeInUp" data-wow-delay="0.7s">
+            <p class="fs-5 wow fadeInUp" style="text-align: justify;" data-wow-delay="0.7s">
                 Somos una organización, que ofrece servicios de consultoría y soluciones integrales en
                 tecnologías de la información y transformación digital con personal altamente calificado, 
                 generando mayor rentabilidad a nuestros clientes.
@@ -266,7 +266,7 @@
                         <div class="timeline-date">Misión</div>
                         <div class="d-flex align-items-center">
                             <i class="fa fa-bullseye fa-3x me-3"></i>
-                            <p>
+                            <p style="text-align: justify;">
                                 Somos una organización, que ofrece servicios de consultoría y soluciones integrales en
                                 tecnologías de la información y transformación digital con personal altamente calificado, 
                                 generando mayor rentabilidad a nuestros clientes.
@@ -279,7 +279,7 @@
                         <div class="timeline-date">Visión</div>
                         <div class="d-flex align-items-center">
                             <i class="fa fa-eye fa-3x me-3"></i>
-                            <p>
+                            <p style="text-align: justify;">
                                 Ser el corporativo líder en integración de proyectos multisectoriales, reconocido por nuestra 
                                 capacidad de conectar empresas y ofrecer soluciones estratégicas que transformen industrias y 
                                 generen un impacto positivo en el mercado global.
@@ -292,7 +292,7 @@
                         <div class="timeline-date">Valores</div>
                         <div class="d-flex align-items-center">
                             <i class="fa-solid fa-hand-holding-heart fa-3x me-3"></i>
-                            <p>
+                            <p style="text-align: justify;"> 
                                 Respeto, lealtad, confianza, rentabilidad, honestidad, responsabilidad, calidad, productividad,
                                 profesionalismo.
                             </p>
