--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
 <body>
 
     <!--Loader start-->
-    <!-- Pantalla de carga -->
     <div id="loader">
         <div class="loader-content">
-            <!-- <lottie-player src="img/loading_prueba.json" background="transparent" speed="1" loop autoplay>
-            </lottie-player> -->
+            <lottie-player src="img/loading.json" background="transparent" speed="1" loop autoplay>
+            </lottie-player>
         </div>
     </div>
     <!--Loader end-->
@@ -130,7 +129,7 @@
                         <!-- Imagen para pantallas menores a 768px -->
                         <source media="(max-width: 768px)" srcset="img/carousel-movil-1.webp">
                         <!-- Imagen por defecto (desktop) -->
-                        <img class="w-100" src="img/carousel-6.png" alt="Slide 1">
+                        <img class="w-100" src="img/carousel-6.webp" alt="Slide 1">
                     </picture>
 
                     <div class="carousel-caption">
@@ -153,7 +152,7 @@
                         <!-- Imagen para pantallas menores a 768px -->
                         <source media="(max-width: 768px)" srcset="img/carousel-movil-2.jpg">
                         <!-- Imagen por defecto (desktop) -->
-                        <img class="w-100" src="img/carousel-5.jpg" alt="Slide 1">
+                        <img class="w-100" src="img/carousel-5.webp" alt="Slide 1">
                     </picture>
                     <div class="carousel-caption">
                         <div class="container">
@@ -220,11 +219,11 @@
                     <div
                         class="service-item-contact position-relative h-100 d-flex justify-content-center align-items-center">
                         <div class="service-text-contact rounded text-center">
-                            <a href="" target="_blank" rel="noopener noreferrer">
+                            <!-- <a href="" target="_blank" rel="noopener noreferrer"> -->
                                 <div class="btn-square rounded-circle mx-auto" style="width: 150px; height: 150px;">
                                     <img class="img-fluid" src="/img/los_diez/famco.png" alt="Icon">
                                 </div>
-                            </a>
+                            <!-- </a> -->
                         </div>
                     </div>
                 </div>
@@ -248,11 +247,11 @@
                     <div
                         class="service-item-contact position-relative h-100 d-flex justify-content-center align-items-center">
                         <div class="service-text_contact rounded text-center">
-                            <a href="" target="_blank" rel="noopener noreferrer">
+                            <!-- <a href="" target="_blank" rel="noopener noreferrer"> -->
                                 <div class="btn-square rounded-circle mx-auto" style="width: 150px; height: 150px;">
                                     <img class="img-fluid" src="/img/los_diez/grupo_yavar.png" alt="Icon">
                                 </div>
-                            </a>
+                            <!-- </a> -->
                         </div>
                     </div>
                 </div>
