--- a/404.html
+++ b/404.html
@@ -6,8 +6,10 @@
     <title>Edge & Cloud</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
-    <meta content="Somos una organización, que ofrece servicios de consultoría y soluciones integrales en tecnologías de la información y 
-    transformación digital con personal altamente calificado, generando mayor rentabilidad a nuestros clientes actuales y futuros" name="description">
+    <meta
+        content="Somos una organización, que ofrece servicios de consultoría y soluciones integrales en tecnologías de la información y 
+    transformación digital con personal altamente calificado, generando mayor rentabilidad a nuestros clientes actuales y futuros"
+        name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon" type="image/x-icon">
@@ -15,7 +17,9 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@500;700&display=swap" rel="stylesheet">  
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@500;700&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -35,22 +39,14 @@
 
 <body>
 
-        <!--Loader star-->
-        <div class="loader loader--active">
-            <div class="loader__icon">
-              <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
-                <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"></path>
-                <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0C22.32,8.481,24.301,9.057,26.013,10.047z"></path>
-                <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20" dur="0.5s" repeatCount="indefinite"></animateTransform>
-              </svg>
-            </div>
-            <div class="loader__tile"></div>
-            <div class="loader__tile"></div>
-            <div class="loader__tile"></div>
-            <div class="loader__tile"></div>
-            <div class="loader__tile"></div>
+    <!--Loader star-->
+    <div id="loader">
+        <div class="loader-content">
+            <lottie-player src="../img/loading.json" background="transparent" speed="1" loop autoplay>
+            </lottie-player>
         </div>
-        <!--Loader end-->
+    </div>
+    <!--Loader end-->
 
 
     <!-- Topbar Start -->
@@ -61,29 +57,26 @@
                     <img src="img/Logo_E&C.png" style="width: 95px; height: 45px;"></img>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Benedicto XV #144 San Jeronimo ll</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Benedicto XV #144 San Jeronimo
+                        ll</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>contacto@edgecloud.com.mx</small>
                     <small class="ms-4"><i class="fab fa-whatsapp me-3"></i>477 754 7672</small>
                     <div class="ms-3 d-flex">
-                        <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href="https://www.facebook.com/profile.php?id=61553718295104"><i class="fab fa-facebook-f" style="color: #00296b;"></i></a>
-                        <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href="https://www.instagram.com/edgecloud_/"><i class="fab fa-instagram" style="color: #00296b;"></i></a>
-                        <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href="https://www.linkedin.com/company/edge-cloud/about/?viewAsMember=true"><i class="fab fa-linkedin-in" style="color: #00296b;"></i></a>
+                        <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2"
+                            href="https://www.facebook.com/profile.php?id=61553718295104"><i class="fab fa-facebook-f"
+                                style="color: #00296b;"></i></a>
+                        <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2"
+                            href="https://www.instagram.com/edgecloud_/"><i class="fab fa-instagram"
+                                style="color: #00296b;"></i></a>
+                        <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2"
+                            href="https://www.linkedin.com/company/edge-cloud/about/?viewAsMember=true"><i
+                                class="fab fa-linkedin-in" style="color: #00296b;"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Topbar End -->
-
-
-
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container text-center py-5">
-            <h2 class="display-2 text-white mb-4 animated slideInDown">404 Error</h2>
-        </div>
-    </div>
-    <!-- Page Header End -->
 
 
     <!-- 404 Start -->
@@ -94,14 +87,15 @@
                     <i class="bi bi-exclamation-triangle display-1" style="color: #00296b;"></i>
                     <h2 class="display-1">404</h2>
                     <h2 class="mb-4">Página no encontrada</h2>
-                    <p class="mb-4">Lo sentimos, ¡la página que has buscado no existe en nuestro sitio web! ¿Quizás ir a nuestra página de inicio o intentar utilizar una búsqueda?</p>
+                    <p class="mb-4">Lo sentimos, ¡la página que has buscado no existe en nuestro sitio web! ¿Quizás ir a
+                        nuestra página de inicio o intentar utilizar una búsqueda?</p>
                     <a class="btn rounded-pill py-3 px-5" href="/">Inicio</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- 404 End -->
-        
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
@@ -110,7 +104,8 @@
             <div class="row">
                 <div class="col-lg mb-3" style="margin: center;">
                     <h4 class="text-white text-center">Ubicación</h4>
-                    <p class="text-center"><i class="fa fa-map-marker-alt me-3"></i>Benedicto XV #144 San Jeronimo ll. C.P. 37148 León, Guanajuato. MX</p>
+                    <p class="text-center"><i class="fa fa-map-marker-alt me-3"></i>Benedicto XV #144 San Jeronimo ll.
+                        C.P. 37148 León, Guanajuato. MX</p>
                     <p class="text-center"><i class="fa fa-envelope me-3"></i>contacto@edgecloud.com.mx</p>
                     <p class="text-center"><i class="fab fa-whatsapp me-3"></i>477 754 7672</p>
                 </div>
@@ -124,14 +119,20 @@
                 <div class="col-lg mb-3" style="margin: center;">
                     <h4 class="text-white text-center">Redes Sociales</h4>
                     <div class="d-flex justify-content-center">
-                        <a class="btn btn-square btn-light rounded-circle me-2" href="https://www.facebook.com/profile.php?id=61553718295104"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-light rounded-circle me-2" href="https://www.instagram.com/edgecloud_/"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-square btn-light rounded-circle me-2" href="https://www.linkedin.com/company/edge-cloud/about/?viewAsMember=true"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-light rounded-circle me-2"
+                            href="https://www.facebook.com/profile.php?id=61553718295104"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-light rounded-circle me-2"
+                            href="https://www.instagram.com/edgecloud_/"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square btn-light rounded-circle me-2"
+                            href="https://www.linkedin.com/company/edge-cloud/about/?viewAsMember=true"><i
+                                class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="text-center"><img id="gto" src="img/marca_gto.png" style="max-width: 100%; width: 75px;"></img></div>
+        <div class="text-center"><img id="gto" src="img/marca_gto.png" style="max-width: 100%; width: 75px;"></img>
+        </div>
     </div>
     <!-- Footer End -->
 
@@ -143,7 +144,7 @@
                 <div class="text-center">
                     &copy; <a class="fw-medium text-light" href="#">Edge & Cloud</a>, Todos los derechos reservados.
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -151,7 +152,8 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i
+            class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
