--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -51,8 +51,8 @@
     <!-- Loader Sart -->
     <div id="loader">
         <div class="loader-content">
-            <!-- <lottie-player src="../img/loading_prueba.json" background="transparent" speed="1" loop autoplay>
-            </lottie-player> -->
+            <lottie-player src="../img/loading.json" background="transparent" speed="1" loop autoplay>
+            </lottie-player>
         </div>
     </div>
     <!-- Loader End -->
@@ -63,7 +63,7 @@
         <div class="container py-1">
             <div class="d-flex align-items-center">
                 <a href="./">
-                    <img src="img/Logo_E&C.png" alt="Logo_E&C" style="width: 95px; height: 45px;"></img>
+                    <img src="../img/Logo_E&C.png" alt="Logo_E&C" style="width: 95px; height: 45px;"></img>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <a href="https://maps.app.goo.gl/zkcrLbU2Kr9YPJ746" class="text-white"><small class="ms-4"><i
